[tool.poetry]
name = "flask-restler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = "~3.10"
Flask = "^3"
SQLAlchemy = "~1.3.24"
apispec = "3.3.2"
pyyaml = "6.0.1"
flask-login = "^0.6.3"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13"
pytest = "6.2.5"
pytest-flask = "^1.3.0"
pytest-sugar = "0.9.2"
marshmallow = "2.21.0"
marshmallow-sqlalchemy = "0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
